# paulander

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  PINOUT.md  README.md  debug_display.py  pyproject.toml  requirements.txt  run.py
sketch/: display_example.ino  sketch.ino
src/: main.py
src/routes/: api.py  web.py
src/services/: calendar_service.py  config_service.py  display_service.py  epdconfig_rpi_gpio.py  scheduler.py  weather_service.py  weather_translations.py
templates/: base.html  config.html  index.html
