[project]
name = "paulander"
version = "0.1.0"
description = "E-ink display dashboard for Raspberry Pi with calendar and weather integration"
authors = [{name = "Dennis Paul", email = "dennis@example.com"}]
readme = "CLAUDE.md"
requires-python = ">=3.9"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "caldav==1.3.9",
    "requests==2.31.0",
    "Pillow==10.0.1",
    "python-dotenv==1.0.0",
    "APScheduler==3.10.4",
    "google-generativeai==0.3.0",
    "pytz==2023.3",
    "vobject==0.9.6.1",
]

[project.optional-dependencies]
rpi = [
    "RPi.GPIO",
    "spidev",
    "gpiozero",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]